# TRECO

./: .readthedocs.yaml  ADVANCED_FEATURES.md  CHANGELOG.md  IMPLEMENTATION_SUMMARY.md  README.md  pyproject.toml
.github/workflows/: docs.yaml  release.yaml
docs/: CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  ISSUES.md
docs/source/: about.rst  advanced-features.rst  conf.py  configuration.rst  contributing.rst  index.rst  input-sources.rst  installation.rst  quickstart.rst  troubleshooting.rst
examples/portswigger/multi-endpoint/: multi-endpoint-thread-groups.yaml
examples/portswigger/partial-construction-race/: attack.yaml
examples/portswigger/single-endpoint-race/: single-endpoint-thread-groups.yaml
schema/: treco-config.schema.json
scripts/: check_docs.py
src/treco/: __init__.py  cli.py
src/treco/connection/: __init__.py  base.py  lazy.py  pooled.py  preconnect.py
src/treco/http/: __init__.py  client.py
src/treco/http/extractor/: __init__.py  base.py  boundary.py  header.py  jpath.py  jwt.py  regex.py  xpath.py
src/treco/metrics/: registry.py
src/treco/models/: config.py  context.py
src/treco/orchestrator/: coordinator.py  parallel_executor.py  race_executor.py  result_analyzer.py
src/treco/parser/: schema_validator.py  validator.py
src/treco/parser/loaders/: yaml.py
src/treco/state/: executor.py  machine.py
tests/: test_input.py  test_schema_validator.py  test_thread_groups.py
